--- a/WT/js1.html
+++ b/WT/js1.html
@@ -40,8 +40,19 @@ form.ssr
       </form>
       <div class="clockpage">
           
-            <span id="clock"></span>
-            
-          </div>
+        <textarea id="clock" type="text" class="notefield"></textarea> 
+      </div> 
+      <form class="ssr">
+        <script>Aforizm();</script>
+        </form>  
+        <form class="ssr">
+          <script>info();</script>
+          </form> 
+          <table>
+                    <tr>
+                    <td ><button onclick="history.back()">Предыдущее</button></td>
+                    <td ><button onclick="history.forward()">Следующее</button></td>
+                    </tr>
+        </table>
     </body>
 </html>
