--- a/WT/HTML 1/index.html
+++ b/WT/HTML 1/index.html
@@ -11,12 +11,14 @@
 
 
 </style>
+<body>
+<canvas id="mycanvas" width="700" style="background-color:#eee; border:1px solid #ccc;"></canvas></br>
+<canvas id="mycanvas1" ></canvas>
 
 
-<canvas id="mycanvas" ></canvas>
 
-
-<body onload = "createImage1();">
+<script>drawShape()</script> 
+<script>createImage1()</script> 
 <button type="button" title="очистить" onclick="clearsel()">очистить</button>
 
 </body>
