--- a/WT/index0.html
+++ b/WT/index0.html
@@ -32,22 +32,16 @@ form.ssr
   background-color: rgb(250, 250, 250)
 }
 
+
+
         </style>
 
-    <body  onload="clockTimer();">
-      <form class="ssr">
-      <script>DocumentLoad();</script>
-      </form>
-      <div class="clockpage">
-          
-        <textarea id="clock" type="text" class="notefield"></textarea> 
-      </div> 
-      <form class="ssr">
-        <script>Aforizm();</script>
-        </form>  
+    <body>
+
+
         <form class="ssr">
           <script>info();</script></br>
-          <button><a href="index2.html">Next</a></button>
+          <button><a href="js1.html">Next</a></button>
           </form> 
           <table>
                     <tr>
