--- a/WT/index2.html
+++ b/WT/index2.html
@@ -32,22 +32,18 @@ form.ssr
   background-color: rgb(250, 250, 250)
 }
 
+
+
         </style>
 
-    <body  onload="clockTimer();">
-      <form class="ssr">
-      <script>DocumentLoad();</script>
-      </form>
-      <div class="clockpage">
-          
+    <body onload="clockTimer();">
+
+
+        <form class="ssr">      
+      <div class="clockpage"> 
         <textarea id="clock" type="text" class="notefield"></textarea> 
       </div> 
-      <form class="ssr">
-        <script>Aforizm();</script>
-        </form>  
-        <form class="ssr">
-          <script>info();</script></br>
-          <button><a href="index2.html">Next</a></button>
+          <button><a href="js1.html">Next</a></button>
           </form> 
           <table>
                     <tr>
